# EtherBrowser

./: CMakeLists.txt  LICENSE  README.md  start.sh
include/: MainWindow.h
resources/styles/: dark.qss
src/: main.cpp
src/core/: BrowserEngine.h
src/ui/: MainWindow.cpp  MainWindow.h
